--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,13 @@
     text-align: center;
     margin-top: 2%;
 }
+
+.ref-card .card {
+  transition: all 0.3s ease;
+}
+
+.ref-card:hover .card {
+  transform: scale(1.05);
+  z-index: 10;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
